--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,36 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  box-sizing: content-box;
+  padding: 12px;
+  margin: 8px auto;
+  font-size: 17px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px;
+  margin: 8px auto;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  text-align: center;
+  padding: 8px;
+  margin: 8px auto;
+  text-align: center;
 }
 
 button {
   background: white;
+  display:block;
+  padding: 8px 16px;
   border: 1px solid #eee;
+  margin: auto;
 }
