--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,32 @@
 .header  {
+  display: flex;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
+  padding: 12px;
+  align-items: center;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  flex: 1;
+  
+}
+
+.left-links {
+  justify-content: flex-start;
+}
+.right-links {
+  justify-content: flex-end;
+}
+
+.left-links ul,
+.right-links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
 .logo {
@@ -9,6 +35,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  text-align: center;
 }
 
 ul {
@@ -22,4 +49,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  
 }
